[package]
name = "spds-profiling"
version = "0.1.0"
authors = ["Rickard Englund <rickard@r-englund.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spds = {path = "../spds"}


rand = "0.7.3"

#[dependencies.tracy-rs]
#version  = "0.1.2"
#features = ["enable_profiler"]
